{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "993b8f0d-a238-41fc-81c0-bfb8d314f4a7",
            "actions": [
                {
                    "name": "LeftClick",
                    "id": "5650b3c8-49c3-42d4-af40-37c137be7b16",
                    "expectedControlLayout": "Button",
                    "continuous": false,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "RightClick",
                    "id": "23b7dd7e-5a88-433d-9d19-a02265d6fb81",
                    "expectedControlLayout": "Button",
                    "continuous": false,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a87ecb3f-938a-4637-987a-215f67a2cc60",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "a5956970-6dfd-436a-a692-cb6f19b032b6",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                }
            ]
        }
    ],
    "controlSchemes": []
}